                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-09-2005 fixed: DVDPlayer wouldn't display subtitles unless the subtitles visible option was toggled of and on in osd
 - 13-09-2005 fixed: DVDPlayer didn't display anything when in the background
 - 13-09-2005 fixed: DVDPlayer would play horribly choppy when there was no audio stream present
 - 13-09-2005 added: Display of type of audiostream (Commentary, For Hearing impaired on those dvd's that support it)
 - 13-09-2005 changed: dvdplayer now select and show audio and subtitle streams, soly based on what's specifed in ifo files. mapping of this to the mpeg streams should now be correct too
 - 13-09-2005 added: Alternative ascii-gfx Filezilla (FTP) Welcome MSG. Disabled by default, to enable, first disable (comment) org. MSG, then uncomment new MSG. Use an ASCII capable font for display in ftpCLIENT. Thx to h8!
 - 12-09-2005 changed: XBMC DVD-Player is public now, and is now used by default when playing dvd's
 - 12-09-2005 fixed: id3 tags with ISO 8859 1 textencoding may not display correct, q:\system\libid3tag.dll got updated
 - 11-09-2005 updated: Polish language file (Thnx to napek)
 - 11-09-2005 updated: Norwegian language file (Thnx to vnm)
 - 11-09-2005 updated: German language file
 - 11-09-2005 fixed: charset conversion from id3 tags was wrong
 - 11-09-2005 changed: libid3tag closes files immediately after reading and writing
 - 11-09-2005 changed: libid3tag only opens files on the hdd with write access
 - 11-09-2005 changed: my music files view now uses a true numeric sort for starting digits, like the library
 - 10-09-2005 fixed: play button in movie info screen now plays back in full screen